Overflow problem corrected
In side bar

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -94,6 +94,7 @@ ul{
 
 .sideColumn > div{
 	clear: both;
+	overflow: hidden;
 	padding-bottom: 10px;
 }
 
